		Fixed transparency glitches in the sniper icon.
		Removed health bars and selection boxes from walls.
		Fixed Tanya being unavailable after using the Chronosphere on a vehicle she is in.
		Tanya can now plant C4 on vehicles.
		Parachute bomb air strike will reveal the whole target area.
		Adjusted AA Guns to fire their guns alternately at a high fire rate, and added contrails to their bullets.
	Tiberian Dawn:
		Commando can now plant C4 on bridges.
		Added the Asset Browser to the Extras menu.
		Removed health bars and selection boxes from walls.
		Changed Nod Obelisk HP to 600 from 400, same as Advanced Guard Tower
		Fixed dinosaurs not being able to collect crates.
		A10 air strike will only reveal the target area.
		Reduced Guard Tower range from 6 to 5.
		Reduced Guard Tower vision from 7 to 6.
		Increased Guard Tower build time from 12 seconds to 24 seconds.
		Reduced Gun Turret range from 6 to 5
		Reduced Gun Turret vision from 7 to 6.
		Increased Gun Turret build time from 15 seconds to 30 seconds.
		Reduced SAM Site range from 10 to 7.
		Increased Sam Site build time from 18 seconds to 36 seconds.
		Reduced Advanced Guard Tower range from 8 to 6.
		Reduced Advanced Guard Tower vision from 9 to 7.
		Increased Advanced Guard Tower build time from 24 seconds to 48 seconds.
		Reduced Obelisk range from 8.5 to 6.5.
		Reduced Obelisk vision from 8 to 7.
		Increased Obelisk build time from 36 seconds to 52 seconds.
		Decreased Tiberium damage rate by a factor of 3.
		Decreased Visceroid health by 25% and removed their ability to gain experience.
		Increased the chance of Tiberium or chemical deaths spawning a Visceroid from 2% to 10%.
	Engine:
		Converted Aircraft CruiseAltitude to world coordinates.
		Converted Health Radius to world coordinates.
		Converted production exits to world coordinates.
		Converted weapon projectiles to world coordinates.
		Converted actor speed to world coordinates.
		Added support for rectangular cells with forced perspective.