@@ -769,7 +769,7 @@ SAM:
 		Name: SAM Site
 		Description: Anti-Air base defense.\n  Strong vs Aircraft\n  Weak vs Infantry, Tanks
 	Building:
-		Power: -20
+		Power: -40
 		Footprint: xx
 		Dimensions: 2,1
 	-GivesBuildableArea:
